# TrackerX

./: .gitignore  README.md  TrackerX-Installer.nsi  TrackerX.spec  build_msi.py  installer.cfg  pyproject.toml  requirements.txt
docs/: index.html
trackerx/: __init__.py  app.py  config.py  main.py
trackerx/core/: __init__.py  database.py  models.py  repositories.py  services.py  theme.py
trackerx/ui/: __init__.py  daily.py  diary.py  habit.py  icons.py  main_window.py  planner.py  project.py  recent.py  sidebar.py  today.py  toolbar.py
trackerx/ui/helper/: __init__.py  sidebar.py
